--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "backtesting>=0.6.4",
     "imblearn>=0.0",
     "jupyter>=1.1.1",
     "kagglehub>=0.3.10",
