--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "prophet>=1.1.6",
     "ruff>=0.11.0",
     "scikit-learn>=1.6.1",
+    "seaborn>=0.13.2",
+    "surprise>=0.1",
     "tensorflow>=2.19.0",
     "yfinance>=0.2.55",
 ]
